fix(Message): add title overflow support
fix some style issues
use &nbsp; instead space for title and username
cleanup styles

--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -48,10 +48,9 @@
 .header {
   display: flex;
   flex-direction: row;
-  margin-bottom: 4px;
-  vertical-align: bottom;
+  margin-bottom: 2px;
   flex: 0 1 auto;
-  height: 20px;
+  height: 22px;
 }
 
 .sender {
@@ -59,15 +58,12 @@
 }
 
 .title {
-  display: inline-block;
   font-size: 16px;
   font-weight: 500;
-  line-height: 20px;
+  @apply --text-overflow-ellipsis;
 }
 
 .username {
-  line-height: 20px;
-  display: inline-block;
   font-size: 14px;
   color: var(--message-username-color);
 }
@@ -171,4 +167,11 @@
       transform: scale(0.9);
     }
   }
+}
+
+.peerInfo {
+  display: inline-flex;
+  flex: 0 1 auto;
+  overflow: hidden;
+  align-items: baseline;
 }
